# UI-App

./: .clang-format  CMakeLists.txt  main.c
.cache/clangd/index/: edit_menu.c.7D4452B3A23C83EA.idx  file_menu.c.E64512754823910D.idx  load_settings.c.2849F107D89EDEE8.idx  main.c.EC609F85DE57236B.idx  menu.c.E13BAA70968836F6.idx  menu.h.0431ECF11082D627.idx  resources.h.79D8A3FD7F9B9506.idx  save_settings.c.0BDA1927730D83AF.idx  settings.c.71C4906BAA4CEB6A.idx  window.c.A8ACABF07499497F.idx  window.h.1F99FAF7FB4E634B.idx
inc/: menu.h  window.h
include/: resources.h
src/: main.c  menu.c  resources.rc  window.c
